<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SignIn">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="242dp"
        android:layout_height="43dp"
        android:hint="@string/Firstname"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="114dp"
        android:layout_height="123dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/com_facebook_loginview_log_out_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/Last_name"
        android:layout_width="242dp"
        android:layout_height="43dp"
        android:hint="@string/lastname"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/Enter_email"
        android:layout_width="242dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enteremail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Last_name"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/Enter_phone_no."
        android:layout_width="242dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/Enterphoneno"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Enter_email"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/Enter_Aadhar_no."
        android:layout_width="242dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/EnterAadharno"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Enter_phone_no."
        app:layout_constraintVertical_bias="0.011" />

    <RadioButton
        android:id="@+id/Femaleid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Femaleid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Enter_Aadhar_no." />

    <RadioButton
        android:id="@+id/Maleid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/Maleid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Femaleid"
        app:layout_constraintTop_toBottomOf="@+id/Enter_Aadhar_no." />

    <Button
        android:id="@+id/Signin_buttonid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Maleid"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>