<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details">

    <EditText
        android:id="@+id/UserName"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/vehicleType"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/vehicalType"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Company"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/vehiclecompany"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicleType"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/vehicleName"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="460dp"
        android:ems="10"
        android:hint="@string/vehicleName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Company" />

    <EditText
        android:id="@+id/color"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/color"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicleName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/VehicleNumber"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/vehicleNumber"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/State"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="332dp"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VehicleNumber"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/City"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/State"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/AddressText"
        android:layout_width="209dp"
        android:layout_height="24dp"
        android:layout_marginTop="48dp"
        android:text="Address"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/State"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/EnterAddress"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddressText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/IDproof"
        android:layout_width="137dp"
        android:layout_height="28dp"
        android:text="@string/idproof"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterAddress"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IDproof"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/photocamera" />

    <TextView
        android:id="@+id/RcProof"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:text="@string/RCProff"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterAddress"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/RcProof"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/photocamera" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="176dp"
        android:layout_height="41dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/confirmbutton"
        android:textColor="@color/browser_actions_bg_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterAddress"
        app:layout_constraintVertical_bias="0.375" />

</androidx.constraintlayout.widget.ConstraintLayout>